--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "start": "node lib/server",
     "start:live": "npm run build:live",
     "build": "tsc -p ./src",
-    "build:live": "nodemon --watch 'src/routes/**/*.ts' --watch 'src/controllers/**/*.ts' --watch 'src/services/**/*.ts' --exec 'ts-node' src/server.ts",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build:tests": "tsc -p ./tests",
     "jest": "jest --forceExit --runInBand --detectOpenHandles --coverage "
   },
   "dependencies": {
-    "@hapi/joi": "^15.1.0",
     "@kinecosystem/kin-sdk-node": "^0.9.4",
     "@types/jest": "^24.0.18",
     "app-root-path": "^2.2.1",
@@ -23,13 +22,9 @@
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.1.1",
-    "helmet": "^3.20.0",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
     "morgan": "^1.9.1",
-    "path": "^0.12.7",
     "pjson": "^1.0.9",
-    "pug": "2.0.0-beta11",
     "response-time": "^2.3.2",
     "winston": "^3.2.1"
   },
