--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.1.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.7.3",
     "morgan": "^1.9.1",
     "pjson": "^1.0.9",
     "response-time": "^2.3.2",
