--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
-    "express-request-id": "^1.4.1",
+    "express-logger-unique-req-id": "^1.0.4",
     "express-validator": "^6.1.1",
-    "http-errors": "^1.7.3",
     "morgan": "^1.9.1",
     "pjson": "^1.0.9",
     "response-time": "^2.3.2",
