--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc -p ./src",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build:tests": "tsc -p ./tests",
-    "jest": "jest --forceExit --runInBand --detectOpenHandles --coverage "
+    "test": "jest --forceExit --runInBand --detectOpenHandles --coverage "
   },
   "dependencies": {
     "@kinecosystem/kin-sdk-node": "^0.9.4",
