--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: node_js
 
 matrix:
   include:
-
+  - node_js: 8
   - node_js: 10
+  - node_js: 11
+  - node_js: 12
 
 script:
   - npm run build
