--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "build": "tsc -p ./src",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build:tests": "tsc -p ./tests",
-    "jest": "jest --forceExit --runInBand --detectOpenHandles --coverage "
+    "test": "jest --forceExit --runInBand --detectOpenHandles --coverage "
   },
   "dependencies": {
     "@kinecosystem/kin-sdk-node": "^0.9.4",
     "@types/jest": "^24.0.18",
-    "app-root-path": "^2.2.1",
     "compression": "^1.7.4",
     "config": "^3.2.2",
     "debug": "^2.6.9",
@@ -24,6 +23,7 @@
     "express-logger-unique-req-id": "^1.0.4",
     "express-validator": "^6.1.1",
     "morgan": "^1.9.1",
+    "nock": "^11.3.3",
     "pjson": "^1.0.9",
     "response-time": "^2.3.2",
     "winston": "^3.2.1"
